# pdf2txt

./: CMakeLists.txt  Dockerfile  Package.resolved  Package.swift  README.md  docker-compose.yml
Public/: 2025-37-3-15-06-34-LPM.txt
Resources/Views/: file_upload.leaf  file_upload_result.leaf
Sources/pdf2txt/: configure.swift  pdf2txt.swift  routes.swift
Tests/pdf2txtTests/: pdf2txtTests.swift
src/: CMakeLists.txt  func.swift  main.cpp  pdf2txt.cpp
src/include/: pdf2txt.hpp
